--- a/CapEAT/UI_CapEat/src/app/nav/nav.component.html
+++ b/CapEAT/UI_CapEat/src/app/nav/nav.component.html
@@ -1,47 +1,56 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" id="text-blue">cap
+    <I>EATS</I>
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarsExample04">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link, color button-color"  href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" id="text-blue" href="#">Home
+          <span class="sr-only">(current)</span>
+        </a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link, color button-color"  href="#/spicelevel">Spicy level <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" id="text-blue" href="#/spicelevel">Spicy level</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link, color button-color"   href="#/maps">Map <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" id="text-blue" href="#/maps">Map</a>
       </li>
-      <li class="nav-item active">
-          <a class="nav-link, color button-color"   href="#/special">Week Special <span class="sr-only">(current)</span></a>
-        </li>
-        <li ngbDropdown class="nav-item active">
-            <a class="nav-link, color button-color"   href="#/catering">Capeat Buffet <span class="sr-only">(current)</span></a>
-            <!-- <a class="nav-lin, color button-color" class="nav-link" class="btn btn-primary"  id="dropdownBasic1" ngbDropdownToggle>Catering</a> 
-            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                <button  href="#/catering" class="dropdown-item">Breakfast</button>
-                <button class="dropdown-item">lunch</button>
-                <button class="dropdown-item">DINNER</button>
-              </div> -->
-          </li>
-      <li class="nav-item active">
-        <a class="nav-link, color button-color"   href="#/history">Histrory <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" id="text-blue" href="#/special">Week Special</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link, color button-color"   href="#">About Capeat <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" id="text-blue" href="#/catering">Capeat Buffet</a>
       </li>
-      <!-- <li ngbDropdown  class="d-inline-block">
-        <a class="nav-lin" class="nav-link" class="btn btn-primary"  id="dropdownBasic1" ngbDropdownToggle>Toggle dropdown</a>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button class="dropdown-item">Action - 1</button>
-          <button class="dropdown-item">Another Action</button>
-          <button class="dropdown-item">Something else is here</button>
-        </div>
-      </li> -->
-    
+
+      <li class="nav-item">
+        <a class="nav-link" id="text-blue" href="#/history">History</a>
+      </li>
+
+      <!-- <li ngbDropdown class="d-inline-block">
+          <a class="nav-link dropdown-toggle" id="text-blue" ngbDropdownToggle>Upcoming events</a>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button class="dropdown-item">WC1 Thanksgiving fun</button>
+            <button class="dropdown-item">Commons @ Christmas</button>
+            <button class="dropdown-item">Fro "YO" for you</button>
+          </div>
+        </li> -->
+
+      <li class="nav-item">
+        <a class="nav-link" href="#" id="text-blue" href="#">About Capeat</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" id="text-blue" href="#">Signout</a>
+      </li>
     </ul>
+    <form class="form-inline my-2 my-md-0">
+      <input class="form-control" type="text" placeholder="Search">
+
+    </form>
   </div>
 </nav>
