update jagatha code

--- a/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.css
+++ b/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.css
@@ -1,9 +1,9 @@
 .table>tbody>tr>td, .table>tfoot>tr>td{
     vertical-align: middle;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
     table#cart tbody td .form-control{
-		width: 20%;
+		width: 100%;
 		display: inline !important;
 	}
 	.actions .btn{
@@ -19,7 +19,7 @@
 	}
 	
 	table#cart thead { display: none; }
-	table#cart tbody td { display: block; padding: .6rem; min-width:320px;}
+	table#cart tbody td { display: block; padding: .6rem; min-width:500px;}
 	table#cart tbody tr td:first-child { background: #333; color: #fff; }
 	table#cart tbody td:before {
 		content: attr(data-th); font-weight: bold;
@@ -31,4 +31,37 @@
 	table#cart tfoot td{display:block; }
 	table#cart tfoot td .btn{display:block;}
 	
+}
+
+#slidecontainer {
+	width: 50%;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 50%;
+    height: 10px;
+    background: red;
+    outline: none; 
+}
+
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 10px;
+    height: 10px;
+    background:black;
+}
+
+.slider::-moz-range-thumb {
+    width: 10px;
+    height: 10px;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+#spice{
+	width: 15px;
+	height: 20px;
+	border: none;
 }
