update the buffet

--- a/CapEAT/UI_CapEat/src/app/catering/catering.component.html
+++ b/CapEAT/UI_CapEat/src/app/catering/catering.component.html
@@ -1,40 +1,53 @@
 <html class="main">
-<h1 class="catHeader" style="text-align: center;">Breakfast</h1>
-<h2 class="catHeader subCatHeader">Breakfast Box&nbsp;<br /><span style="font-size: 11pt;">$6.50&nbsp; &nbsp;Per Person</span></h2>
-<div class="productWrapper prod l433 l443">
-<div class="productName">Bagel Breakfast Box</div>
-<div id="pd2182button" class="productActionButton">Select Item</div>
-<div class="productDetailRow">
-<div class="productDescription">
-<ul>
-<li>Choice of Bagel</li>
-<li>Assorted Flavored and Whipped Cream Cheese, Salted Butter and Jam</li>
-<li>Seasonal Fruit Salad</li>
-<li>Seasonal Muffin, Butter and Jam</li>
-<li>Assorted Individual Bottled Juices</li>
-</ul>
-</div>
-<div class="productPrice">
-<div class="price">&nbsp;</div>
-<div class="clear">&nbsp;</div>
-</div>
-</div>
-</div>
-<div class="productWrapper prod l433 l443">
-<div class="productName">Ficelle Breakfast Box</div>
-<div id="pd2183button" class="productActionButton">Select Item</div>
-<div class="productDetailRow">
-<div class="productDescription">
-<ul>
-<li>Choice of Ficelle</li>
-<li>Seasonal Fruit Salad</li>
-<li>Seasonal Muffin, Butter and Jam</li>
-<li>Assorted Individual Bottled Juices</li>
-</ul>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</div>
-</div>
-</div>
-<div class="productWrapper prod l433 l443">&nbsp;</div>
+<br>
+<h1> Welcome to Capital One Cafeteria
+    <!-- at West Creek Campus,  -->
+    <!-- <br>based in the heart of Richmond. -->
+</h1>
+<h4>
+    We offer a high quality buffet with an oriental twist.
+    <br> We offer a vast range of over 40+ dishes on our buffet where you can find tasty oriental food prepared only by our finest,
+    highly experienced chefs.
+    <br> Are you looking for the ultimate dining experience? Let us spoil you with our cocktails with great flavors while you
+    choose from our buffet.
+</h4>
+<form>
+    <div>
+        <h2>Breakfast</h2>
+        <p>
+            <li>Bagel</li>
+            <li>Seasonal Fruit Salad</li>
+            <li>Seasonal Muffin, Butter and Jam</li>
+            <li>Assorted Individual Bottled Juices</li>
+            <li>Assorted Flavored and Whipped Cream Cheese, Salted Butter and Jam</li>
+        </p>
+    </div>
+</form>
+
+<form>
+    <div>
+        <h2>Lunch</h2>
+        <p>
+            <li>Bagel</li>
+            <li>Seasonal Fruit Salad</li>
+            <li>Seasonal Muffin, Butter and Jam</li>
+            <li>Assorted Individual Bottled Juices</li>
+            <li>Assorted Flavored and Whipped Cream Cheese, Salted Butter and Jam</li>
+        </p>
+    </div>
+</form>
+
+<form>
+    <div>
+        <h2>Dinner</h2>
+        <p>
+            <li>Bagel</li>
+            <li>Seasonal Fruit Salad</li>
+            <li>Seasonal Muffin, Butter and Jam</li>
+            <li>Assorted Individual Bottled Juices</li>
+            <li>Assorted Flavored and Whipped Cream Cheese, Salted Butter and Jam</li>
+        </p>
+    </div>
+</form>
+<br>
 </html>
