--- a/CapEAT/UI_CapEat/src/app/catering/catering.component.css
+++ b/CapEAT/UI_CapEat/src/app/catering/catering.component.css
@@ -1,8 +1,8 @@
 .main{
-    background: black;
+    background: bottom;
     text-align: -webkit-center;
     font-size: 16px;
-    color: blueviolet;
+    /* color: ; */
 }
 
 .header{
