--- a/CapEAT/UI_CapEat/src/app/footer/footer.component.html
+++ b/CapEAT/UI_CapEat/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-dark">
 
   <!--Footer-->
-  <footer class="page-footer mdb-color center-on-small-only">
+  <footer class="page-footer mdb-color center-on-small-only footer">
 
     <!--Social buttons-->
     <div class="text-center mb-6">
