add the login_auth_logic

--- a/CapEAT/UI_CapEat/src/app/Home/home.component.html
+++ b/CapEAT/UI_CapEat/src/app/Home/home.component.html
@@ -265,21 +265,21 @@
 	<br>
 	<div>
 		<app-dialog [(visible)]="showDialog">
-			<form #form="ngForm">
-				<div class="form-group">
+			<form>
+				<div class="input">
 					<h2> Sign in </h2>
 					<hr>
-					<label for="name">Username</label>
-					<input type="text" class="form-control" placeholder="miu834" name="eid" id="eid" data-ng-required="">
+					<label>Username</label>
+					<input type="text" class="form-control" placeholder="miu834" [(ngModel)]="eid" id="eid" name="eid" required autofocus>
 				</div>
 
-				<div class="form-group">
-					<label for="Password">Password</label>
-					<input type="password" class="form-control" id="password" required>
+				<div class="input">
+					<label>Password</label>
+					<input type="password" class="form-control" [(ngModel)]="password" name="password" required>
 
 				</div>
 				<br>
-				<button type="submit" class="btn btn-info btn-block">Submit</button>
+				<button type="button" (click)='verifyUser()' class="btn btn-info btn-block">Submit</button>
 
 			</form>
 
