history DB updates

--- a/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.html
+++ b/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.html
@@ -73,7 +73,7 @@
 
                 <tr>
                     <td>
-                        <a [routerLink]="['/menu']" class="btn btn-warning">
+                        <a [routerLink]="[continueShopping]" class="btn btn-warning">
                             <i class="fa fa-angle-left"></i> Continue Shopping</a>
                     </td>
                     <td colspan="5" class="hidden-xs"></td>
