--- a/CapEAT/UI_CapEat/src/app/history/history.component.html
+++ b/CapEAT/UI_CapEat/src/app/history/history.component.html
@@ -1,23 +1,46 @@
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/hideshowpassword/2.0.8/hideShowPassword.min.js">
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.js"></script>
-
-
-
-<table class="table table-striped" id="reimbursementHistory">
-  <thead>
-    <tr>
-      <th>OrderID</th>
-      <th>Item</th>
-      <th>Description</th>
-      <th>Price</th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
+<div class='panel panel-primary'>
+    <div class='panel-heading'>
+      <div class="container-fluid">
+        <div class="col-md-11">
+       <h4 > Order History Details </h4>
+        </div><div class="col-md-1">
+                <button title="Checkout all cart items" 
+                [routerLink]="['/addCart/history']" class="draggable btn btn-primary btn-circle btn-xl" 
+                role="button" aria-expanded="false"> <span class="glyphicon glyphicon-shopping-cart">
+                  </span></button>
+           <span  class="cart-items-count">
+             <span class=" notification-counter">{{history.getTotalCartItems()}}</span>
+            </span>
+            </div>
+      </div>
+    </div>
+    <div class='panel-body'>
+        
+         
+            
+         <div class='table-responsive'>
+            <table class='table'
+                    *ngIf='orderHistory?.length'>
+                <thead>
+                    <tr>
+                        <th>Order Id</th>
+                        <th>Item</th>
+                        <th>Price</th>
+                        <th>Order Date</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor='let order of orderHistory'>
+                        <td>{{order.orderId}}</td>
+                        <td><h4>{{ order.itemName }}</h4>
+                        <p>{{ order.itemDesc }}</td>
+                        <td>{{ order.itemPrice | currency:'USD':true:'1.2-2'}}</td>
+                        <td>{{order.orderDate}}
+                        <td><button type="button" class="btn btn-primary" (click)="addItemToCart(order)">Add To Cart</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
