--- a/CapEAT/UI_CapEat/src/app/map/map.component.html
+++ b/CapEAT/UI_CapEat/src/app/map/map.component.html
@@ -4,8 +4,8 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
-  
+<body style="background-color: #7395AE">
+          <div class="container-fluid">   
     <h1 id="mapHeader">Need Help Finding a Cafeteria?</h1>
     <h4 id="mapDescription">Please select a cafeteria from the dropdown list below:</h4>
         <img class="img" id="capOneImage" src='././assets/images/westcreek.png'>
@@ -26,6 +26,7 @@
       <br>
       <br>
       <br>
+</div>
 </body>
 </html>
 
