--- a/CapEAT/UI_CapEat/src/app/Home/home.component.css
+++ b/CapEAT/UI_CapEat/src/app/Home/home.component.css
@@ -4,56 +4,59 @@
 
 .img {
     height: 400px;
-    max-width: 100%;
-    object-fit: contain;
+    width: 700px;
+    margin-right: 10px;
+    margin-left: 50px;
+  
+  
   }
+
+ .html {
+    height: 100%;
+ }
   
 .body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-    background-color: #D3D3D3;
-  }
+   background-color: #7395AE;
+   margin: 0;
+   padding: 0;
+   width: 100%;
+   
   
-  .jumbotron { 
-      /* background-image: url("././Images/Food.jpg"); */ */
-      background-color: #D3D3D3;
-      margin-bottom: 0;
-      min-height: 50%;
-      height: 300px;
-      background-repeat: no-repeat;
-      background-position: center;
-      -webkit-background-size: cover;
-      background-size: cover;
-  }
+   
+}
+
+
   
-  #capOneHeader {
-      color: white;
-      font-family: Arial;
-      font-size: 90px;
-  }
+.carousel {
+    width: 700px;
+    margin: auto;
+    
+
+}
+
   
-  #ssoidLabel {
-      color: black;
-      margin-right: 3px;
-      font-size: 20px;
-      font-family: helvetica; 
-  }
+  
   
   .btn btn-primary btn-lg btn-block {
       margin-top: 100px;
   }
   
   #capEatContainer {
-      background-color: #D3D3D3;
+      background-color: #7395AE;
      
   }
   
   #navigationForm {
-      background-color: #D3D3D3;
+      background-color: #7395AE;
   }
   
   #navBar {
-      background-color: #D3D3D3;
+      background-color: #7395AE;
+  }
+
+  .img-responsive {
+      width: 750px;
+      height: 450px;
   }
   
   .img_class {
@@ -61,28 +64,28 @@
       height:50px;
   }
   
-  #eatText {
-      color: #2E60C4; 
-      font-size: 100px;
-      font-family: impact;
-  }
+
   
   .header {
       margin-top: 120px;
      
   }
   
-  #oneText {
-      color: white;
-      font-size: 90px;
-      font-family: Arial;
-  }
   
   #orderHistoryButton {
       margin-top: 35px;
       align-self: right;
       
   }
+
+  .container {
+     width: 750px;
+     height: 500px;
+     overflow-y: scroll;
+
+  }
+
+
 
   
   
