--- a/CapEAT/UI_CapEat/src/app/footer/footer.component.css
+++ b/CapEAT/UI_CapEat/src/app/footer/footer.component.css
@@ -1,6 +1,35 @@
-.color {
+.navbar  {
+  height:135px; 
+  width: 100%; 
+  background-image: none;
+  background-repeat: repeat;
+  background-attachment: scroll;
+  background-position: 0% 0%;
+  position: relative;
+  bottom: 0pt;
+  left: 0pt;
+  background-color: #7395AE;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+  
+ 
 
-    color: white;
+
+}
+
+.footer {
+  background-color: #557A95;
+  margin: 0px;
+  padding: 0px;
+  
+  
+  
+}
+
+.color {
+    color: black;
     border: none;
     padding: 15px 32px;
     text-align: center;
@@ -13,8 +42,7 @@
 }
 
 .color2 {
-    background-color: #e7e7e7; 
-    color: black;
+    background-color: #5D5C61; 
     border: none;
     padding: 15px 32px;
     text-align: center;
@@ -68,5 +96,6 @@
   .footer {
     grid-row-start: 2;
     grid-row-end: 3;
+   
   }
   
