--- a/CapEAT/UI_CapEat/src/app/footer/footer.component.html
+++ b/CapEAT/UI_CapEat/src/app/footer/footer.component.html
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-dark bg-dark">
+
+<nav class="navbar">
 
   <!--Footer-->
-  <footer class="page-footer mdb-color center-on-small-only footer">
+  <footer class="page-footer mdb-color">
 
     <!--Social buttons-->
     <div class="text-center mb-6">
@@ -30,4 +31,5 @@
   <!-- <div class="ft-bg"></div>
 <button routerLink="/addcart">addcart</button>
 </div> -->
+
 </nav>
