--- a/CapEAT/UI_CapEat/src/app/map/map.component.css
+++ b/CapEAT/UI_CapEat/src/app/map/map.component.css
@@ -1,11 +1,14 @@
 .body {
-    background-color: black;
+    background-color: #7395AE;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 #dropdownContent {
     width: 500px;
     height: 130px;
-    background-color: rgb(245, 197, 115);
+    background-color: #ADD8E6;
 }
 
 
@@ -15,18 +18,16 @@
     position: relative;
     width: 500px;
     height: 40px;
-    background-color: orange;
+    background-color: #557A95;
     font-size: 20px;
   
 
 }
 
 #capOneImage {
-    display:inline-block;
-    margin-left: 315px;      
-    position: relative;
-    width: 800px;
-    height: 500px;
+    margin-left: 365px;
+    width: 700px;
+    height: 400px;
    
    
 
@@ -34,9 +35,11 @@
 
 #mapHeader {
     text-align: center;
+    color: white;
 }
 
 #mapDescription {
     text-align: center;
+    color: white;
 }
 
