--- a/CapEAT/UI_CapEat/src/app/nav/nav.component.html
+++ b/CapEAT/UI_CapEat/src/app/nav/nav.component.html
@@ -1,7 +1,9 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" id="text-blue">cap
-    <I>EATS</I>
-  </a>
+
+
+
+<nav class="navbar navbar-expand-md">
+    <img class="image" src='././assets/images/capEATlogo.png'>
+  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -15,20 +17,20 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/spicelevel">Spicy level</a>
+        <a class="nav-link" id="text-blue" href="#/nutrition">Nutrition Info</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/maps">Map</a>
+        <a class="nav-link" id="text-blue" href="#/maps">Cafeteria Maps</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/special">Week Special</a>
+        <a class="nav-link" id="text-blue" href="#/special">Specials</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/catering">Capeat Buffet</a>
+        <a class="nav-link" id="text-blue" href="#/catering">CapEat Buffet</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/history">History</a>
+        <a class="nav-link" id="text-blue" href="#/history">About CapEat</a>
       </li>
 
       <!-- <li ngbDropdown class="d-inline-block">
@@ -52,5 +54,7 @@
       <input class="form-control" type="text" placeholder="Search">
 
     </form>
+ 
   </div>
+  
 </nav>
