--- a/CapEAT/UI_CapEat/src/app/Home/home.component.html
+++ b/CapEAT/UI_CapEat/src/app/Home/home.component.html
@@ -268,6 +268,7 @@
 			<form>
 				<div class="input">
 					<h2> Sign in </h2>
+					<div *ngIf="userstatus==='Fail'"><span style="color:red;">Authentication Failed!! Please try again</span> </div>
 					<hr>
 					<label>Username</label>
 					<input type="text" class="form-control" placeholder="miu834" [(ngModel)]="eid" id="eid" name="eid" required autofocus>
