--- a/CapEAT/UI_CapEat/src/app/map/map.component.css
+++ b/CapEAT/UI_CapEat/src/app/map/map.component.css
@@ -35,11 +35,11 @@
 
 #mapHeader {
     text-align: center;
-    color: white;
+    color: #3b5466;
 }
 
 #mapDescription {
     text-align: center;
-    color: white;
+    color: #3b5466;
 }
 
