--- a/CapEAT/UI_CapEat/src/app/nav/nav.component.html
+++ b/CapEAT/UI_CapEat/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
 
 
 <nav class="navbar navbar-expand-md">
-    <img class="image" src='././assets/images/capEATlogo.png'>
+    <img class="image" src='././assets/images/capEATlogo2.png'>
   
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
         <a class="nav-link" id="text-blue" href="#/special">Specials</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/catering">CapEat Buffet</a>
+        <a class="nav-link" id="text-blue" href="#/catering">Chef's Table</a>
       </li>
 
       <li class="nav-item">
