--- a/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.html
+++ b/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <table id="cart" class="table table-hover table-condensed">
             <thead>
                 <tr>
