--- a/CapEAT/UI_CapEat/src/app/catering/catering.component.css
+++ b/CapEAT/UI_CapEat/src/app/catering/catering.component.css
@@ -1,16 +1,35 @@
-.main{
-    background: bottom;
-    text-align: -webkit-center;
-    font-size: 16px;
-    /* color: ; */
-}
 
-.header{
-    font-size: -webkit-xxx-large;
-    color: blue;
-}
 
 .img_class {
     width:260px;
     height:250px;
+}
+
+.chefHeader {
+    text-align: center;
+    color: #3b5466;
+ 
+   
+}
+
+.subheader {
+    text-align: center;
+    color: #3b5466;
+   
+}
+
+.body {
+    background-color: #7395AE;
+}
+
+#breakfastMenu {
+    margin-left: 500px;
+    height: 250px;
+    width: 400px;
+}
+
+#lunchMenu {
+    margin-left: 500px;
+    height: 250px;
+    width: 400px;
 }
