--- a/CapEAT/UI_CapEat/src/app/footer/footer.component.css
+++ b/CapEAT/UI_CapEat/src/app/footer/footer.component.css
@@ -8,7 +8,7 @@
   position: relative;
   bottom: 0pt;
   left: 0pt;
-  background-color: #7395AE;
+  background-color: #3b5466;
   margin-bottom: 0px;
   margin-top: 0px;
   margin-right: 0px;
@@ -20,7 +20,7 @@
 }
 
 .footer {
-  background-color: #557A95;
+  background-color: #3b5466;
   margin: 0px;
   padding: 0px;
   
