footer fix, nav link hover over, white space fix, updated image

--- a/CapEAT/UI_CapEat/src/app/Menu/breakfast.component.css
+++ b/CapEAT/UI_CapEat/src/app/Menu/breakfast.component.css
@@ -5,8 +5,13 @@
 thead {
     color: #7395AE;
 }
+
+.panel-body {
+    position: relative;
+   }
+
 .cart-box{
-     position: fixed;
+    position: fixed;
   right: 30px;
   width: 48px;
   height: 48px;
