--- a/CapEAT/UI_CapEat/src/app/Menu/lunch.component.html
+++ b/CapEAT/UI_CapEat/src/app/Menu/lunch.component.html
@@ -1,3 +1,6 @@
+
+<body>
+    
 <div class='panel panel-primary'>
         <div class='panel-heading'>
            <h4> {{pageTitle}} </h4>
@@ -54,3 +57,7 @@
     <div *ngIf='errorMessage' class='alert alert-danger'>
         Error: {{ errorMessage }}
     </div>
+
+
+
+</body>
