--- a/CapEAT/UI_CapEat/src/app/catering/catering.component.html
+++ b/CapEAT/UI_CapEat/src/app/catering/catering.component.html
@@ -16,7 +16,7 @@
             <br>
             <br>
         <a [routerLink]="['/lunch']">
-                <img src="././assets/images/lunch.png" id="lunchMenu">
+                <img src="././assets/images/lunch2.png" id="lunchMenu">
                 </a>
         <br>
         <br>
