--- a/CapEAT/UI_CapEat/src/app/nav/nav.component.html
+++ b/CapEAT/UI_CapEat/src/app/nav/nav.component.html
@@ -12,25 +12,30 @@
   <div class="collapse navbar-collapse" id="navbarsExample04">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" id="text-blue" href="#">Home
+        <a class="nav-link" id="text-blue" href="#">    Home 
           <span class="sr-only">(current)</span>
-        </a>
+        </a> |
+      
       </li>
+      
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/nutrition">Nutrition Info</a>
+        <a class="nav-link" id="text-blue" href="#/nutrition">Nutrition Info  </a> |
       </li>
+      
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/maps">Cafeteria Maps</a>
+        <a class="nav-link" id="text-blue" href="#/maps">Cafeteria Maps  </a> |
       </li>
+      
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/special">Specials</a>
+        <a class="nav-link" id="text-blue" href="#/special">Specials  </a> |
       </li>
+      
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/catering">Chef's Table</a>
+        <a class="nav-link" id="text-blue" href="#/catering">Chef's Table  </a> |
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/history">About CapEat</a>
+        <a class="nav-link" id="text-blue" href="#/history">Order History </a> |
       </li>
 
       <!-- <li ngbDropdown class="d-inline-block">
@@ -43,14 +48,14 @@
         </li> -->
 
       <li class="nav-item">
-        <a class="nav-link" href="#" id="text-blue" href="#">About Capeat</a>
+        <a class="nav-link" href="#" id="text-blue" href="#">About Capeat | </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#">Signout</a>
+        <a class="nav-link" id="text-blue" href="#">Signout |</a>
       </li>
     </ul>
-   
+    
  
   </div>
   
