--- a/CapEAT/UI_CapEat/src/app/nutrition/nutrition.component.css
+++ b/CapEAT/UI_CapEat/src/app/nutrition/nutrition.component.css
@@ -20,6 +20,11 @@ meter::-webkit-meter-optimum-value {
     border-collapse: collapse;
     width: 100%;
     color: black;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    height: 500px;
 }
 
 .tableRow {
