--- a/CapEAT/UI_CapEat/src/app/Menu/menu.component.css
+++ b/CapEAT/UI_CapEat/src/app/Menu/menu.component.css
@@ -2,8 +2,12 @@
   background-color: #7395AE;
 }
 
+.panel-body {
+  height: 450px;;
+}
+
 thead {
-    color: #337AB7;
+    color: #7395AE;
 }
 .cart-box{
      position: fixed;
