--- a/CapEAT/UI_CapEat/src/app/footer/footer.component.css
+++ b/CapEAT/UI_CapEat/src/app/footer/footer.component.css
@@ -1,11 +1,9 @@
 .navbar  {
-  height:135px; 
-  width: 100%; 
+ 
   background-image: none;
   background-repeat: repeat;
   background-attachment: scroll;
   background-position: 0% 0%;
-  position: relative;
   bottom: 0pt;
   left: 0pt;
   background-color: #3b5466;
@@ -13,6 +11,8 @@
   margin-top: 0px;
   margin-right: 0px;
   margin-left: 0px;
+  width: 100%;
+  height: 200px;
   
  
 
@@ -23,6 +23,9 @@
   background-color: #3b5466;
   margin: 0px;
   padding: 0px;
+  position: absolute;
+  height: 25px;
+  width: 100%;
   
   
   
