--- a/CapEAT/UI_CapEat/src/app/map/map.component.css
+++ b/CapEAT/UI_CapEat/src/app/map/map.component.css
@@ -3,6 +3,11 @@
     margin: 0;
     padding: 0;
     width: 100%;
+    
+}
+
+.container-fluid {
+    height: 800px;
 }
 
 #dropdownContent {
@@ -26,8 +31,8 @@
 }
 
 #capOneImage {
-    
-    width: 700px;
+    max-width: 100%;
+    height: auto;
     height: 400px;
     display: block;
     margin: 0 auto;
