--- a/CapEAT/UI_CapEat/src/app/nav/nav.component.css
+++ b/CapEAT/UI_CapEat/src/app/nav/nav.component.css
@@ -2,11 +2,12 @@
     color: rgb(38, 55, 66);
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+   display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
     cursor: pointer;
     font-size: 18px;
+   
+   
 }
 
 .navbar {
@@ -16,6 +17,7 @@
 }
 
 .image {
+    
     width: 150px;
     height: 100px;
 }
@@ -23,3 +25,15 @@
 .form-control {
     margin: 0px;
 }
+
+.navbar {
+    width:100%;
+   
+
+}
+
+
+a:hover {
+    text-decoration: underline !important; 
+   
+  }
