adding hover over effect to chef's table images

--- a/CapEAT/UI_CapEat/src/app/catering/catering.component.html
+++ b/CapEAT/UI_CapEat/src/app/catering/catering.component.html
@@ -11,12 +11,12 @@
         
         
         <a [routerLink]="['/breakfast']">
-            <img src="././assets/images/breakfast.png" id="breakfastMenu" data-toggle="modal" data-target="#myModal">
+            <img src="././assets/images/breakfast.png" id="breakfastMenu" class="image">
             </a>
             <br>
             <br>
         <a [routerLink]="['/lunch']">
-                <img src="././assets/images/lunch2.png" id="lunchMenu">
+                <img src="././assets/images/lunch2.png" id="lunchMenu" class="image">
                 </a>
         <br>
         <br>
