update the pages and UI thanks

--- a/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.html
+++ b/CapEAT/UI_CapEat/src/app/Addcart/addcart.component.html
@@ -8,6 +8,17 @@
 
 <body>
     <div class="container-fluid">
+
+            <div id="alert">
+                    <a class="alert" href="#alert">10% of Purchase Price Goes To Feedmore</a>
+                    <!-- <a  class="alert" href="feedmore.org">Learn more </a> -->
+                 </div>
+
+                 <br>
+                 <br>
+                 <br>
+                 <br>
+                 
         <table id="cart" class="table table-hover table-condensed">
             <thead>
                 <tr>
@@ -66,7 +77,7 @@
                     <td></td>
                     <td></td>
                     <td colspan="5" class="text-right">
-                        <I>(Tax and delivery fee are included)</I>
+                        <I>(Taxes are included)</I>
                     </td>
                 </tr>
                 <tr></tr>
@@ -86,48 +97,12 @@
             </tfoot>
         </table>
 
+        
     </div>
-    <div>
-
-        Our delivery fee goes to the charity org name capital one More Info :
-        <a [routerLink]="['/menu']" class="btn btn-warning"></a>
-
-    </div>
+    <!-- <div id="alert">
+            <a class="alert" href="#alert">10% of Purchase Price Goes To Feedmore</a>
+         </div> -->
+         
+         
 </body>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 </html>
