--- a/CapEAT/UI_CapEat/src/app/footer/footer.component.html
+++ b/CapEAT/UI_CapEat/src/app/footer/footer.component.html
@@ -18,9 +18,15 @@
     <!--Copyright-->
     <div class="footer-copyright">
       <div class="container-fluid">
-        <h6 align="center" class="color">Copyright © 2017 . All Rights Reserved. Powered by
-          <a href="aboutangulareaters.html" target="_blank">AngularEaters</a>
+       
+        <h6 align="center" class="color" class=".us">
+            Having trouble?
+            <a href="mailto:angulareater@capone.com">Contact us</a>
         </h6>
+
+        <h6 align="center" class="color">Copyright © 2017 . All Rights Reserved. Powered by
+            <a href="aboutangulareaters.html" target="_blank">AngularEaters</a>
+          </h6>
       </div>
     </div>
     <!--/.Copyright-->
