--- a/CapEAT/UI_CapEat/src/app/payment/payment.component.css
+++ b/CapEAT/UI_CapEat/src/app/payment/payment.component.css
@@ -63,3 +63,13 @@
 #newcard{
     margin-right: 80px;
 }
+
+.container-fluid {
+    background-color: #7395AE ;
+ 
+ }
+ 
+ .med_font {
+    background-color: #7395AE ;
+    
+ }
