--- a/CapEAT/UI_CapEat/src/app/payment/payment.component.html
+++ b/CapEAT/UI_CapEat/src/app/payment/payment.component.html
@@ -1,4 +1,5 @@
 <div align="center" style="border:10px" class="med_font">
+    <br>
     <label>New Card</label>
     <input name="options" ng-control="options" type="radio" [value]="1" [(ngModel)]="option" id="newcard">
     <label>Existing Card</label>
@@ -13,7 +14,7 @@
                 <div id="pay-invoice" class="card">
                     <div class="card-body">
                         <div class="card-title">
-                            <h3 class="text-center">Pay Invoice</h3>
+                            <h3 class="text-center">Pay</h3>
                         </div>
                         <hr>
                         <form action="" method="post" novalidate="novalidate">
@@ -48,6 +49,9 @@
                                 <input id="cc-number" name="cc-number" type="tel" class="form-control cc-number identified visa" value="" data-val="true"
                                     data-val-required="Please enter the card number" data-val-cc-number="Please enter a valid card number"
                                     autocomplete="cc-number">
+                                <h6>
+                                    <font  color='Green'>Use Capital One Card and get 1.5% cash back </font>
+                                </h6>
                                 <span class="help-block" data-valmsg-for="cc-number" data-valmsg-replace="true"></span>
                             </div>
                             <div class="row">
@@ -78,7 +82,9 @@
                                     autocomplete="postal-code">
                                 <span class="help-block" data-valmsg-for="x_zip" data-valmsg-replace="true"></span>
                             </div>
-                            <form action="#" onsubmit="if(document.getElementById('agree').checked) { return true; } else { alert('Please indicate that you have read and agree to the Terms and Conditions and Privacy Policy'); return false; }">
+
+
+                            <form action="#" onsubmit="if(document.getElementById('agree').required= true; } else { alert('Please indicate that you have read and agree to the Terms and Conditions and Privacy Policy'); return false; }">
                                 <input type="checkbox" name="checkbox" value="check" id="agree" /> I have read and agree to the Terms and Conditions.
                                 <br>
                                 <input type="checkbox" name="checkbox" value="check" id="save" /> Please save my card information for future use.
@@ -88,12 +94,18 @@
 
 
                             <div>
-                                <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
+
+                                <a [routerLink]="['/thankyou']" class="btn btn-lg btn-info btn-block">Pay
+                                    <i class="fa fa-lock fa-lg"></i>&nbsp;
+                                </a>
+
+
+                                <!-- <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
                                     <i class="fa fa-lock fa-lg"></i>&nbsp;
                                     <span id="payment-button-amount">Pay</span>
                                     <span id="payment-button-sending" style="display:none;">Sending…</span>
+                                </button> -->
 
-                                </button>
                             </div>
                         </form>
                     </div>
@@ -162,12 +174,15 @@
 
 
                             <div>
-                                <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
+                                <a [routerLink]="['/thankyou']" class="btn btn-lg btn-info btn-block">Pay
+                                    <i class="fa fa-lock fa-lg"></i>&nbsp;
+                                </a>
+
+                                <!-- <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
                                     <i class="fa fa-lock fa-lg"></i>&nbsp;
                                     <span id="payment-button-amount">Pay</span>
                                     <span id="payment-button-sending" style="display:none;">Sending…</span>
-
-                                </button>
+                                </button> -->
                             </div>
                         </form>
                     </div>
